@@ -6,6 +6,9 @@ Question about function in HostInfo.java - ID: 3400651
 StringIndexOutOfBounds in ServiceInfoImpl.java - ID: 3393338
 JmDNS 3.4.1 does not answer to PTR requests on sub-types - ID: 3437695
 problem with . in name
+Incorrect behavior for a query with non-zero RCODE value - ID: 3451306
+
+
 
 CHANGELOG 24 August 2011 Pierre Frisch
 Rev the source code to 3.4.1
